--- a/waybar/config.jsonc
+++ b/waybar/config.jsonc
@@ -10,18 +10,18 @@
         "sway/workspaces",
 	"hyprland/workspaces",
         "sway/mode",
-        "sway/scratchpad"
+        "sway/scratchpad",
+	"cpu",
+	"memory",
+	"network",
+	"idle_inhibitor"
     ],
     "modules-center": [
         "sway/window"
     ],
     "modules-right": [
-        "idle_inhibitor",
         "pulseaudio",
-        "network",
         "power-profiles-daemon",
-        "cpu",
-        "memory",
         "temperature",
         "backlight",
         "sway/language",
