--- a/hyprlock.conf
+++ b/hyprlock.conf
@@ -6,83 +6,236 @@
 #        |___/|_|                           
 # 
 
+# For more information visit https://wiki.hyprland.org/Hypr-Ecosystem/hyprlock/
+```
+# For more information visit https://wiki.hyprland.org/Hypr-Ecosystem/hyprlock/
+
+$scrPath      = ~/.config/hypr/hyprlock/
+$imgPath      = ~/.config/hypr/hyprlock/assets/
+
+$USER         = André Oliveira # Your Alias
+$host         = uname -n #Your Alias
+$wifi-mode    = false # Change the WiFi output. true = show SSID, false = Connected.
+$bt-mode      = false # Change the Bluetooth output. true = show Device name, false = Connected.
+
+# Default geolocation provider is IP-API.COM, hardcode it if the location does not match the current location.
+# Hardcode your location (If hardcode does not recognize your City, change it to IP Geolocation provider in weatherinfo.sh)
+$CITY         = 
+$COUNTRY      = 
+
+# WALLPAPER
+# Just comment and uncomment to select
+$wallpaper    = screenshot
+#$wallpaper    = ~/your/wallpaper-path.png
+$blur  = 2
+
+# ADJUST HERE
+$rounding     = 12
+$shape-rd     = -1
+$font-text    = GeistMono Nerd Font Bold
+$font-text0   = GeistMono Nerd Font
+$font-display = PP Neue Machina Ultra-Bold
+$font-symbol  = JetBrainsMono Nerd Font Mono
+# Input Var
+$weight       = 2
+$inner-color  = rgba(0, 0, 0, 0.5)
+$border-color = rgba(255, 255, 255, 0.15)
+
+# Colors
+$clock-color  = rgba(255, 255, 255, 1)
+$fg0          = rgba(255, 255, 255, 1)
+$fg1          = rgba(0, 0, 0, 1)
+$shape-col0   = rgba(255, 255, 255, 1)
+$shape-col1   = rgba(0, 0, 0, 0.25)
+$shape-col2   = rgba(255, 255, 255, 0.25)
+$shadow-pass  = 2
+$shadow-size  = 3
+$shadow-color = rgb(0,0,0)
+$shadow-boost = 1.2
+$text-shadow-pass   = 1
+$text-shadow-boost  = 0.5
+
+
+
+# GENERAL
 general {
-    ignore_empty_input = true
+    no_fade_in          = true
+    grace               = 1
+    disable_loading_bar = false
+    hide_cursor         = true
+    ignore_empty_input  = true
+    text_trim           = true
 }
 
+#BACKGROUND
 background {
-    monitor =
-    path = /wp2754860.jpg   # only png supported for now
+    monitor     = 
+    path        = $wallpaper
+
+    blur_passes         = $blur
+    contrast            = 0.8916
+    brightness          = 0.7172
+    vibrancy            = 0.1696
+    vibrancy_darkness   = 0
 }
 
+# PROFILE PICTURE
+#image {
+    monitor     = 
+    path        = $imgPath/perfil.jpeg 
+    size        = 90 # Reduced size
+    opacity     = 0.25
+
+    shadow_pass         = $shadow-pass
+    shadow_size         = $shadow-size
+    shadow_color        = $shadow-color
+    shadow_boost        = $shadow-boost
+
+    rounding            = $rounding # negative values mean circle
+    border_size         = 4
+    rotate              = 0 # degrees, counter-clockwise
+    
+    position            = 15, -15 # Adjusted position
+    halign              = left
+    valign              = top
+    zindex              = 1
+}
+
+# USER INFO
+#label {
+    monitor     =
+    text        = cmd[update:1000] echo -e "$USER\n󰁥 $($host)\n\n$(uname -r)\nPackages: $(pacman -Q | wc -l) pacman"
+    
+    shadow_passes       = 1
+    shadow_boost        = 0.5
+    
+    color               = $fg0
+    font_size           = 9 # Reduced font size
+    font_family         = $font-text
+
+    position            = 140, -30 # Adjusted position
+    halign              = left
+    valign              = top
+}
+
+# WEATHERCAST & LOCATION
+#label {
+#    monitor     =
+#    text        = cmd[update:1000] echo "$(bash $scrPath/weatherinfo.sh)"
+#    
+#    shadow_passes       = 1
+#    shadow_boost        = 0.5
+#    
+#    color               = $fg0
+#    font_size           = 9 # Reduced font size
+#    font_family         = $font-text
+#
+#    position            = 0, -15 # Adjusted position
+#    halign              = center
+#    valign              = top
+#}
+
+# INPUT FIELD
 input-field {
-    monitor =
-    size = 200, 50
-    outline_thickness = 3
-    dots_size = 0.33 # Scale of input-field height, 0.2 - 0.8
-    dots_spacing = 0.15 # Scale of dots' absolute size, 0.0 - 1.0
-    dots_center = true
-    dots_rounding = -1 # -1 default circle, -2 follow input-field rounding
-    outer_color = rgb(151515)
-    inner_color = rgb(FFFFFF)
-    font_color = rgb(10, 10, 10)
-    fade_on_empty = true
-    fade_timeout = 1000 # Milliseconds before fade_on_empty is triggered.
-    placeholder_text = <i>Input Password...</i> # Text rendered in the input box when it's empty.
-    hide_input = false
-    rounding = -1 # -1 means complete rounding (circle/oval)
-    check_color = rgb(204, 136, 34)
-    fail_color = rgb(204, 34, 34) # if authentication failed, changes outer_color and fail message color
-    fail_text = <i>$FAIL <b>($ATTEMPTS)</b></i> # can be set to empty
-    fail_transition = 300 # transition time in ms between normal outer_color and fail_color
-    capslock_color = -1
-    numlock_color = -1
-    bothlock_color = -1 # when both locks are active. -1 means don't change outer color (same for above)
-    invert_numlock = false # change color if numlock is off
-    swap_font_color = false # see below
-    position = 0, -20
-    halign = center
-    valign = center
+    monitor     =
+    size        = 220, 45 # Reduced size
+    rounding    = $rounding
+    
+    outline_thickness   = $weight
+    outer_color         = $border-color
+    dots_size           = 0.1 # Scale of input-field height, 0.2 - 0.8
+    dots_spacing        = 1 # Scale of dots' absolute size, 0.0 - 1.0
+    dots_center         = true
+    
+    inner_color         = $inner-color
+    font_color          = $fg0
+    fade_on_empty       = false
+    
+    font_family         = $font-text
+    placeholder_text    = <span>$USER</span>
+    hide_input          = false
+    
+    position            = 0, -180 # Adjusted position
+    halign              = center
+    valign              = center
+    zindex              = 10
 }
 
+# TIME HR
 label {
-    monitor =
-    #clock
-    text = cmd[update:1000] echo "$TIME"
-    color = rgba(200, 200, 200, 1.0)
-    font_size = 55
-    font_family = Fira Semibold
-    position = -100, 70
-    halign = right
-    valign = bottom
-    shadow_passes = 5
-    shadow_size = 10
+    monitor     =
+    text        = cmd[update:1000] echo -e "$(date +"%H")" # 24-Hour Format
+   #text        = cmd[update:1000] echo -e "$(date +"%I")" # 12-Hour Format
+    color       = $clock-color
+    
+    shadow_pass         = $shadow-pass
+    shadow_size         = $shadow-size
+    shadow_color        = $shadow-color
+    shadow_boost        = $shadow-boost
+    
+    font_size           = 120 # Reduced font size
+    font_family         = $font-display 
+    
+    position            = 0, -120 # Adjusted position
+    halign              = center
+    valign              = top
 }
 
+# TIME MM
 label {
-    monitor =
-    text = André Oliveira
-    color = rgba(200, 200, 200, 1.0)
-    font_size = 20
-    font_family = Fira Semibold
-    position = -100, 160
-    halign = right
-    valign = bottom
-    shadow_passes = 5
-    shadow_size = 10
+    monitor     =
+    text        = cmd[update:1000] echo -e "$(date +"%M")"
+    color       = $clock-color
+    
+    shadow_pass         = $shadow-pass
+    shadow_size         = $shadow-size
+    shadow_color        = $shadow-color
+    shadow_boost        = $shadow-boost
+
+    font_size           = 120 # Reduced font size
+    font_family         = $font-display
+    
+    position            = 0, -250 # Adjusted position
+    halign              = center
+    valign              = top
 }
 
-image {
-    monitor =
-    path = /home/andre/Pictures/pixelcut-export.jpeg
-    size = 280 # lesser side if not 1:1 ratio
-    rounding = -100 # negative values mean circle
-    border_size = 4
-    border_color = rgb(221, 221, 221)
-    rotate = 0 # degrees, counter-clockwise
-    reload_time = -1 # seconds between reloading, 0 to reload with SIGUSR2
-#    reload_cmd =  # command to get new path. if empty, old path will be used. don't run "follow" commands like tail -F
-    position = 0, 200
-    halign = center
-    valign = center
+
+# GREETING
+label {
+    monitor     =
+    text        = cmd[update:1000] echo "$(bash $scrPath/greeting.sh)"
+    
+    shadow_passes       = $text-shadow-pass
+    shadow_boost        = $text-shadow-boost
+    
+    color               = $fg0
+    font_size           = 9 # Reduced font size
+    font_family         = $font-text
+
+    position            = 0, -45 # Adjusted position
+    halign              = center
+    valign              = center
 }
+
+# TODAY IS
+label {
+    monitor     =
+    text        = cmd[update:1000] bash -c 'day=$(date +%A); echo "Today is $day"'
+
+    shadow_passes       = $text-shadow-pass
+    shadow_boost        = $text-shadow-boost
+
+    color               = $fg0
+    font_size           = 9 # Reduced font size
+    font_family         = $font-text
+
+    position            = 0, -60  # Adjusted position
+    halign              = center
+    valign              = center
+}
+
+# DATE
+label {
+    monitor     =
+    text        = cmd[update:1000] bash -c 'day=$(date +%d); case "$day" in
